# dmarc-rs

./: .cirrus.yml  .gitignore  Cargo.toml  README.md
benches/: async_resolve.rs  resolve.rs  sync_resolve.rs
src/: entry.rs  filetype.rs  input.rs  ip.rs  iplist.rs  lib.rs  main.rs  resolve.rs  resolver.rs  task.rs  types.rs
src/dmarc/: mod.rs
src/input/: gzip.rs  mod.rs  zip.rs
src/res/: ares.rs  async_resolve.rs  ip.rs  iplist.rs  mod.rs  resolver.rs
testdata/: google.com!keltia.net!1538438400!1538524799.xml
tests/: cli-files.rs  cli-opts.rs  cli.rs  help.rs  version.rs
