[package]
name = "dmarc-rs"
version = "0.4.0"
edition = "2021"
authors = ["Ollivier Robert <roberto@keltia.net>"]
keywords = ["dmarc", "reporting", "e-mail", "cli", "cli-utility", "spf", "dkim", "email"]
repository = "https://github.com/keltia/dmarc-rs"
license = "MIT"
readme = "README.md"
description = "Rust utility to decode and display DMARC reports."
documentation = "https://docs.rs/dmarc-rs"
categories = [ "email", "command-line-utilities" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive", "cargo"] }
dns-lookup = "1.0"
flate2 = "1.0"
log = "0.4"
num_cpus = "1"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0"
stderrlog = "0.5.1"
threadpool = "1"
zip = "0.6.2"

[dev-dependencies]
rstest = "0.11.0"
assert_cmd = "2.0"
mockall = "0"
