[package]
name = "dmarc-rs"
version = "0.6.0"
edition = "2021"
authors = ["Ollivier Robert <roberto@keltia.net>"]
keywords = ["dmarc", "cli-utility", "spf", "dkim", "email"]
repository = "https://github.com/keltia/dmarc-rs"
license = "MIT"
readme = "README.md"
description = "Rust utility to decode and display DMARC reports."
documentation = "https://docs.rs/dmarc-rs"
categories = [ "email", "command-line-utilities" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "sync_resolve"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
dns-lookup = "2.0"
eyre = "0.6"
flate2 = "1.0"
log = "0.4"
num_cpus = "1"
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0"
strum = { version = "0.25", features = ["derive", "strum_macros"] }
tempfile = "3"
tracing = "0.1"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "time", "tracing"] }
zip = "0.6"

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0"
fake = "2"
rstest = "0.18"
threadpool = "1"
